--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,3 +1,5 @@
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <div th:fragment="header">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">Blog</h5>
@@ -6,7 +8,8 @@
             <a class="p-2 text-dark" href="/blog">Блог</a>
             <a class="p-2 text-dark" href="/blog/add">Добавить статью</a>
             <a class="p-2 text-dark" href="/about">Про нас</a>
+            <a sec:authorize="isAuthenticated()" class="btn btn-outline-success my-2 mr-2 my-sm-0" th:action="@{/logout}">Выйти </a>
+            <a class="btn btn-outline-success my-2 mr-2 my-sm-0" sec:authorize="isAnonymous()" th:href="@{/login}">Логин</a>
         </nav>
-        <a class="btn btn-outline-primary" href="#">Вход</a>
     </div>
 </div>
